fix the sonatype credentials